// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<a
  class="rmd-link"
  href="/some-url"
>
  Content
</a>
`;

exports[`Link > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<a
  class="rmd-link custom-class-name"
  href="/some-url"
  style="color: blue;"
>
  Content
</a>
`;
